--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,11 @@
     <properties>
         <java.version>1.8</java.version>
 
+        <jsf.version>2.1</jsf.version>
         <spring.version>4.2.2.RELEASE</spring.version>
         <springJpa-version>1.9.0.RELEASE</springJpa-version>
         <hikariCp.version>2.4.1</hikariCp.version>
+        <hibernate.version>5.0.3.Final</hibernate.version>
     </properties>
 
     <dependencies>
@@ -37,13 +39,37 @@
             <version>${springJpa-version}</version>
         </dependency>
 
+        <!-- JPA Provider (Hibernate) -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
             <version>${hikariCp.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>com.sun.faces</groupId>
+            <artifactId>jsf-api</artifactId>
+            <version>2.2.12</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.sun.faces</groupId>
+            <artifactId>jsf-impl</artifactId>
+            <version>2.2.4</version>
+        </dependency>
     </dependencies>
 
 </project>
