cos zaczelo dzialac

--- a/BaksMachineWebApp/web/WEB-INF/web.xml
+++ b/BaksMachineWebApp/web/WEB-INF/web.xml
@@ -17,6 +17,11 @@
         </param-value>
     </context-param>
 
+    <!-- Welcome page -->
+    <welcome-file-list>
+        <welcome-file></welcome-file>
+    </welcome-file-list>
+
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
