cos zaczelo dzialac

--- a/BaksMachineWebApp/web/WEB-INF/web.xml
+++ b/BaksMachineWebApp/web/WEB-INF/web.xml
@@ -5,6 +5,7 @@
          version="3.1">
 
     <display-name>PrimeFaces Web Application</display-name>
+
     <context-param>
         <param-name>contextClass</param-name>
         <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
@@ -17,54 +18,45 @@
         </param-value>
     </context-param>
 
-    <!-- Welcome page -->
-    <welcome-file-list>
-        <welcome-file></welcome-file>
-    </welcome-file-list>
-
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+
     <listener>
         <listener-class>
             org.springframework.web.context.request.RequestContextListener
         </listener-class>
     </listener>
 
-    <!-- Change to "Production" when you are ready to deploy -->
-
+     <!--Change to "Production" when you are ready to deploy &ndash;&gt;-->
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
 
     <!-- Welcome page -->
+
     <welcome-file-list>
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
-
 
     <!-- JSF mapping -->
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
-
-        <init-param>
-            <param-name>contextClass</param-name>
-            <param-value>
-                org.springframework.web.context.support.AnnotationConfigWebApplicationContext
-            </param-value>
-        </init-param>
     </servlet>
 
+
     <!-- Map these files with JSF -->
+
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/faces/*</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
+
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
@@ -77,7 +69,7 @@
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
-
     </servlet-mapping>
+
 
 </web-app>
