cos zaczelo dzialac

--- a/OperaWebApp/pom.xml
+++ b/OperaWebApp/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>BaksMachine</artifactId>
-        <groupId>BaksMachine</groupId>
+        <artifactId>Opera2016</artifactId>
+        <groupId>Opera2016</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>BaksMachineWebApp</artifactId>
+    <artifactId>OperaWebApp</artifactId>
     <packaging>war</packaging>
 
     <properties>
@@ -20,14 +20,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>BaksMachine</groupId>
-            <artifactId>BaksMachineEntities</artifactId>
+            <groupId>Opera2016</groupId>
+            <artifactId>OperaWebApp</artifactId>
             <version>1.0-SNAPSHOT</version>
 
         </dependency>
         <dependency>
-            <groupId>BaksMachine</groupId>
-            <artifactId>BaksMachineServices</artifactId>
+            <groupId>OperaServices</groupId>
+            <artifactId>OperaServices</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
